syntax = "proto3";

option go_package = "github.com/uchidas-rogue/grpc-test/common/orders";


service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrders (GetOrderRequest) returns (GetOrderResponse);
}

message Order {
    int32 order_id = 1;
    int32 customer_id = 2;
    int32 product_id = 3;
    int32 quantity = 4;
}

message CreateOrderRequest {
    int32 customer_id = 1;
    int32 product_id = 2;
    int32 quantity = 3;
}

message CreateOrderResponse {
    string status = 1;
}

message GetOrderRequest {
    int32 customer_id = 1;
}

message GetOrderResponse {
    repeated Order orders = 1;
}